# MoneyViya

./: .dockerignore  .env.example  .gitignore  Dockerfile  MoneyViya_2.0_Complete_Rebuild.md  MoneyViya_Auto_Capture_Strategy_&_Prompts.md  MoneyViya_Complete_Agent_Prompts.md  MoneyViya_Complete_Blueprint.md  MoneyViya_Product_Strategy_&_Prompts.md  MoneyViya_UI_UX_Design_System_&_Prompts.md  MoneyViya_WhatsApp_Ultimate_Founder_Edition.md  PLAY_STORE_LISTING.md  VIYA_DESIGN_BRIEF_COMPLETE.md  VIYA_DESIGN_SYSTEM.json  VIYA_DEV_COMPLETE_FOR_ANTIGRAVITY.md  VIYA_FINTECH_IMPLEMENTATION.md  VIYA_SAAS_UPGRADE_PRD.md  VIYA_UI_COMPLETE_FOR_ANTIGRAVITY.md  VIYA_V2_DEV_ANTIGRAVITY.md  VIYA_V2_UI_ANTIGRAVITY (1).md  VIYA_V2_UI_ANTIGRAVITY.md  VIYA_V3_PRD.md  app.py  assetlinks.json  check_schema.py  docker-compose.yml  ecosystem.config.js  fix_reminders.py  fix_rls.py  fix_user.py  moneyview_api.py  pyproject.toml  render.yaml  requirements.txt  setup_db.py  signing-key-info.txt  signing.keystore  test_reminder.py  upload_certificate.pem  vercel.json
agents/: advanced_whatsapp_agent.py  aeie.py  moneyview_agent.py  v2_orchestrator.py  v3_orchestrator.py
api/: index.py  whatsapp.py
database/: __init__.py  db_service.py  fintech_repository.py  migrate_supabase.py  schema.sql  supabase_schema.sql
frontend/: capacitor.config.ts  index.html  lighthouse-report.json  package-lock.json  package.json  vercel.json  vite.config.js
routes/: __init__.py  api_v1.py  dashboard_api.py  fintech_api.py
services/: account_aggregator_service.py  auto_capture_service.py  brokerage_service.py  (+26 more)
(+125 files in other folders)
