# ─── Viya AI — Python Project Configuration ───
# PRD Section 2.4: Lint, type-check, test configuration

[project]
name = "viya-api"
version = "3.9.0"
description = "Viya AI — Your intelligent personal life operating system"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (ok in tests)
    "S104",   # hardcoded bind
    "B008",   # do not perform function call in argument defaults
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["app", "services", "routes", "agents"]
omit = ["tests/*", "venv/*", "__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
